--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,25 @@
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+  /* color scheme */
+  --white: hsl(0, 0%, 100%);
+  --violet-light: hsl(270, 3%, 87%);
+  --violet-normal: hsl(279, 6%, 55%);
+  --violet-dark: hsl(278, 68%, 11%);
+  --error: hsl(0, 100%, 66%);
+  --gradient-from: hsl(249, 99%, 64%);
+  --gradient-to: hsl(278, 94%, 30%);
+
+  font-family: "Space Grotesk", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--violet-light);
+  background-color: var(--violet-dark);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -34,7 +32,7 @@ body {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: var(--violet-dark);
+    background-color: var(--violet-light);
   }
 }
